src/main/metadata-retrieve/objects/Car_Model_Attribute__c.object
<CustomObject>
    <description>Knowledge: This object is to store Car Model Attribute info to be used in Car Model comparison.</description>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <formula>TEXT(Attribute__r.Attribute_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <formula>Text(Attribute__r.Attribute_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Car Model Attribute</relationshipLabel>
        <relationshipName>Car_Model_Attribute</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>text(Car_Model__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id field for migration purpose</description>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Model</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Car Model Attribute</relationshipLabel>
        <relationshipName>Car_Model_Attribute</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>text( Car_Model__r.Model__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <formula>text( Car_Model__r.Series__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Car Model Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute__c</columns>
        <columns>Attribute_Category__c</columns>
        <columns>Attribute_Type__c</columns>
        <columns>Brand__c</columns>
        <columns>Car_Model__c</columns>
        <columns>Model__c</columns>
        <columns>Series__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CMA{000000}</displayFormat>
        <label>Car Model Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Model Attribute</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>